# redpoint-haskell

./: CHANGELOG.md  HelpersSpec.hs  LICENSE  MainOld.hs  README.md  Spec-old.hs  Transfer1.hs  TurnstilesMain.hs  beatles+2014.txt  beatles-partial2014.txt  beatles-raw.txt  beatles2014.txt  ghcid.txt  holder-new.txt  made-with.txt  ormolu.txt  package.yaml  practice.txt  redpoint-haskell.cabal  scratch.txt  stack.yaml
app/: Main.hs
resources-test/: beatles-bad.json
src/: DrunkenPirate.hs  Fact.hs  GiftHistory.hs  GiftPair.hs  Gift_History.hs  Gift_Pair.hs  Hat.hs  Helpers.hs  Main.hs  Main_Helpers.hs  MyState.hs  Player.hs  Players.hs  Roster.hs  Roster_Create.hs  Roster_Utility.hs  Rules.hs  State.hs  Transfer1.hs  TurnstileMain.hs
test/: All_Tests.hs  BorrowerSpec.hs  FactSpec.hs  GiftHistorySpec.hs  GiftPairSpec.hs  HatSpec.hs  Hat_Test.hs  HelpersSpec.hs  MyStateSpec.hs  PlayerSpec.hs  PlayersSpec.hs  RosterSpec.hs  Roster_Test.hs  RulesSpec.hs  Rules_Test.hs  Spec.hs  StateSpec.hs  StripSpec.hs
