name:                redpoint-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/eatobin/redpoint-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Tobin
maintainer:          eatobin@gmail.com
copyright:           None
category:            None
build-type:          Simple
cabal-version:       >=1.10

executable redpoint-haskell
  hs-source-dirs:      src
                     , test
  main-is:             Main.hs
  other-modules:       Hat
                     , Roster_Utility
                     , Roster
                     , Roster_Test
                     , All_Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , containers
                     , MissingH
                     , stm
                     , random-extras
